@@ -16,7 +16,6 @@ export interface BichoWinner {
   id: string;
   profit: number;
   option: string;
-  taxed: number;
   bet: number;
   didWin: boolean;
 }
