@@ -1,75 +1,0 @@
-import { createEmbed, hexStringToNumber } from '../../utils/discord/embedUtils';
-import { InteractionContext } from '../../types/menhera';
-import { calculateSkipCount, createPaginationButtons, usersToIgnoreInTop } from '.';
-import { getTopTaxesPaid } from '../../utils/apiRequests/statistics';
-import cacheRepository from '../../database/repositories/cacheRepository';
-import { getDisplayName, getUserAvatar } from '../../utils/discord/userUtils';
-import userRepository from '../../database/repositories/userRepository';
-import titlesRepository from '../../database/repositories/titlesRepository';
-
-const executePaidTaxesTop = async (
-  ctx: InteractionContext,
-  page: number,
-  embedColor: string,
-): Promise<void> => {
-  const skip = calculateSkipCount(page);
-  const res = await getTopTaxesPaid(skip, await usersToIgnoreInTop());
-
-  if (!res || res.length === 0)
-    return ctx.makeMessage({ content: ctx.prettyResponse('error', 'common:api-error') });
-
-  const embed = createEmbed({
-    title: ctx.prettyResponse('wink', 'commands:top.estatisticas.impostos.taxes', {
-      page: page > 1 ? page : 1,
-    }),
-    color: hexStringToNumber(embedColor),
-    fields: [],
-  });
-
-  const [members, titles] = await Promise.all([
-    Promise.all(res.map(async (a) => cacheRepository.getDiscordUser(`${a.id}`, page <= 3))),
-    Promise.all(res.map(async (a) => userRepository.ensureFindUser(`${a.id}`))),
-  ]);
-
-  const resolvedTitles = await Promise.all(
-    titles.map(async (a) => ({
-      text: await titlesRepository.getTitleInfo(a.currentTitle),
-      id: a.currentTitle,
-    })),
-  );
-
-  for (let i = 0; i < res.length; i++) {
-    const member = members[i];
-    const rawTitle = resolvedTitles.find(
-      (a) => a.id === titles.find((b) => b.id === `${member?.id}`)?.currentTitle,
-    );
-
-    const translatedTitle =
-      ctx.guildLocale === 'en-US'
-        ? rawTitle?.text?.textLocalizations?.['en-US']
-        : rawTitle?.text?.text;
-
-    if (member) {
-      if (i === 0) embed.thumbnail = { url: getUserAvatar(member, { enableGif: true }) };
-      if (member.username.startsWith('Deleted User'))
-        cacheRepository.addDeletedAccount([res[i].id]);
-    }
-
-    embed.fields?.push({
-      name: `**${skip + i + 1} -** ${member ? getDisplayName(member) : `ID ${res[i].id}`}`,
-      value: `${ctx.locale('commands:top.estatisticas.impostos.paid', {
-        value: res[i].taxes,
-      })}\n> ${translatedTitle ?? '🤓☝️'}`,
-      inline: false,
-    });
-  }
-
-  const pagination = createPaginationButtons(ctx, 'imposto', embedColor, 'NONE', page);
-
-  // eslint-disable-next-line @typescript-eslint/no-non-null-assertion
-  if (embed.fields!.length < 10) pagination.components[1]!.disabled = true;
-
-  ctx.makeMessage({ embeds: [embed], components: [pagination] });
-};
-
-export { executePaidTaxesTop };
