@@ -131,19 +131,6 @@ const getTopCommandsByUses = async (
   return res.data;
 };
 
-const getTopTaxesPaid = async (
-  skip: number,
-  bannedUsers: string[],
-): Promise<{ id: string; taxes: number }[] | null> => {
-  const res = await dataRequest
-    .get(`/statistics/taxes/top`, { params: { skip }, data: { bannedUsers } })
-    .catch(() => null);
-
-  if (!res) return null;
-
-  return res.data;
-};
-
 const getTopUsersByUses = async (
   skip: number,
   bannedUsers: string[],
@@ -214,10 +201,9 @@ const postTransaction = async (
   amount: TransactionRegister['amount'],
   currencyType: TransactionRegister['currencyType'],
   reason: ApiTransactionReason,
-  taxes?: number,
 ): Promise<void> => {
   await dataRequest
-    .post('/statistics/transaction', { authorId, targetId, amount, currencyType, reason, taxes })
+    .post('/statistics/transaction', { authorId, targetId, amount, currencyType, reason })
     .catch(debugError);
 
   logger.debug(
@@ -288,7 +274,6 @@ export {
   postCoinflipMatch,
   getPokerStats,
   getUserTransactions,
-  getTopTaxesPaid,
   getFazendinhaStatistics,
   getGamblingGameStats,
   getTopUsersByUses,
